--- a/demos.html
+++ b/demos.html
@@ -64,9 +64,9 @@
             <span></span><span></span><span></span><span></span>
             <!-- Dates -->
             <span>1</span><span>2</span><span>3</span>
-            <span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span><span>10</span>
-            <span>11</span><span>12</span><span>13</span><span>14</span><span>15</span><span>16</span><span>17</span>
-            <span>18</span><span>19</span><span>20</span><span>21</span><span>22</span><span>23</span><span>24</span>
+            <span>4</span><span>5</span><span>6</span><span style="position:relative;">7<span class="badge">2</span></span><span>8</span><span>9</span><span>10</span>
+            <span>11</span><span>12</span><span>13</span><span>14</span><span style="position:relative;">15<span class="badge">1</span></span><span>16</span><span>17</span>
+            <span>18</span><span>19</span><span>20</span><span style="position:relative;">21<span class="badge">3</span></span><span>22</span><span style="position:relative;">23<span class="badge"></span></span><span>24</span>
             <span>25</span><span>26</span><span>27</span><span>28</span><span>29</span><span>30</span><span>31</span>
           </div>
         </div>
